--- a/assets/example.css
+++ b/assets/example.css
@@ -7,6 +7,22 @@ h1 {
   clear: both;
 }
 
+.layer {
+  clear: both;
+}
+
+.layer .row {
+  float: left;
+  clear: left;
+}
+
+.layer .tile {
+  float: left;
+  width: 12px;
+  height: 12px;
+  background-color: #ddd;
+}
+
 .tileset {
   float: left;
   width: 34%;
