--- a/assets/example.css
+++ b/assets/example.css
@@ -18,9 +18,15 @@ h1 {
 
 .layer .tile {
   float: left;
-  width: 12px;
-  height: 12px;
+  width: 16px;
+  height: 16px;
   background-color: #ddd;
+  font-size: 16px;
+  line-height: 14px;
+}
+
+.layer .tile .filled {
+  background-color: #6d6;
 }
 
 .tileset {
