--- a/assets/example.css
+++ b/assets/example.css
@@ -3,6 +3,12 @@ html body {
   background-color: #e5f7e1;
 }
 
+.debug {
+  border: 2px solid #efc;
+  margin: 5px 0;
+  padding: 15px;
+}
+
 h1 {
   clear: both;
 }
